--- a/FlightTracker/Base.lproj/Main.storyboard
+++ b/FlightTracker/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Flights-->
+        <!--Flights View Controller-->
         <scene sceneID="pPu-hA-efQ">
             <objects>
                 <viewController id="lxQ-Ya-6eY" customClass="FlightsViewController" customModule="FlightTracker" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ydt-Bk-bpo">
-                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
@@ -32,14 +32,55 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="38F-tL-IYs"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Flights" image="airplane" id="glW-lS-VvV"/>
+                    <navigationItem key="navigationItem" id="4SR-gJ-Nyp"/>
                     <connections>
                         <outlet property="tableView" destination="Ydt-Bk-bpo" id="9bo-7y-OR5"/>
+                        <segue destination="bzW-CF-pBT" kind="show" identifier="flightInfoSegue" id="Q0K-3u-4Ia"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cqh-u0-caA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="371" y="-325"/>
+            <point key="canvasLocation" x="1309.5999999999999" y="-325.18740629685158"/>
+        </scene>
+        <!--Flight View Controller-->
+        <scene sceneID="Ud4-MJ-rJU">
+            <objects>
+                <viewController id="bzW-CF-pBT" customClass="FlightViewController" customModule="FlightTracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bTV-p1-6NV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trip to Hawaii" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ezc-8j-L6K">
+                                <rect key="frame" x="135" y="204" width="104" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wLY-XB-J4G">
+                                <rect key="frame" x="149" y="388" width="76" height="30"/>
+                                <state key="normal" title="View Flight"/>
+                                <connections>
+                                    <action selector="viewFlightTapped:" destination="bzW-CF-pBT" eventType="touchUpInside" id="Xdt-eg-3Ny"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ezc-8j-L6K" firstAttribute="top" secondItem="nRp-HA-B2f" secondAttribute="top" constant="140" id="7Wb-k8-fH3"/>
+                            <constraint firstItem="wLY-XB-J4G" firstAttribute="centerX" secondItem="bTV-p1-6NV" secondAttribute="centerX" id="DhR-if-VVV"/>
+                            <constraint firstItem="nRp-HA-B2f" firstAttribute="bottom" secondItem="wLY-XB-J4G" secondAttribute="bottom" constant="200" id="wUH-Jc-4jq"/>
+                            <constraint firstItem="ezc-8j-L6K" firstAttribute="centerX" secondItem="bTV-p1-6NV" secondAttribute="centerX" id="z8n-43-jeo"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="nRp-HA-B2f"/>
+                    </view>
+                    <connections>
+                        <outlet property="flightNameLabel" destination="ezc-8j-L6K" id="G0g-Gx-aDj"/>
+                        <segue destination="l69-DF-tJZ" kind="show" identifier="plotPathSegue" id="RN7-v1-hbB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GvF-p0-Nn5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2214" y="-744"/>
         </scene>
         <!--Map-->
         <scene sceneID="0EA-jf-eqc">
@@ -50,10 +91,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="HqN-3n-CRB">
-                                <rect key="frame" x="0.0" y="20" width="375" height="597"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="553"/>
                             </mapView>
                             <button alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vls-aG-WtN">
-                                <rect key="frame" x="325" y="40" width="30" height="30"/>
+                                <rect key="frame" x="325" y="84" width="30" height="30"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="ohy-vh-z8f"/>
@@ -65,7 +106,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CgK-5E-zoN">
-                                <rect key="frame" x="325" y="90" width="30" height="30"/>
+                                <rect key="frame" x="325" y="134" width="30" height="30"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="K2Q-nB-BKc"/>
@@ -77,7 +118,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jF3-fl-BCl">
-                                <rect key="frame" x="317" y="140" width="46" height="30"/>
+                                <rect key="frame" x="317" y="184" width="46" height="30"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="KS7-Za-gWm"/>
@@ -203,12 +244,31 @@
                     </tabBar>
                     <connections>
                         <segue destination="l69-DF-tJZ" kind="relationship" relationship="viewControllers" id="WLL-5U-WQI"/>
-                        <segue destination="lxQ-Ya-6eY" kind="relationship" relationship="viewControllers" id="Cw2-xD-dig"/>
+                        <segue destination="aYq-4A-dCA" kind="relationship" relationship="viewControllers" id="Cw2-xD-dig"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jek-jD-Tff" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-582" y="-658"/>
+        </scene>
+        <!--Flights-->
+        <scene sceneID="A2m-lD-yUm">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="aYq-4A-dCA" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Flights" image="airplane" id="glW-lS-VvV"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="pbW-ku-lp0">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="lxQ-Ya-6eY" kind="relationship" relationship="rootViewController" id="Baf-tj-syl"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xgN-DL-1WJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="370.39999999999998" y="-325.18740629685158"/>
         </scene>
     </scenes>
     <resources>
@@ -217,4 +277,7 @@
         <image name="map" width="25" height="25"/>
         <image name="record" width="25" height="25"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="RN7-v1-hbB"/>
+    </inferredMetricsTieBreakers>
 </document>
